tests/errors/sem_aug_add_int.kt
fun main() {
    var x: Int = 5
    x += 5.5
}
